tests/reference/ast-program_without_line_cc-78281a4.stderr
syntax error: Expected program end
 --> tests/errors/program_without_line_cc.f90:1:1 - 2:8
  |
1 |    print *, "OK"
  |    ^^^^^^^^^^^^^...
...
  |
2 |    contains
  | ...^^^^^^^^ 
